--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -6,22 +6,30 @@
     font-family: 'Source Sans Pro', sans-serif;
 }
 
+body {
+    background: #B9BBB6;
+}
+
+body a {
+    color: #222021; /* shadow */
+}
+
 ::-webkit-scrollbar {
     display: none;
 }
 
 .light-content {
-    background: #e4e4e4;
-    color: #363636; /* shadow */
+    background: #B9BBB6;
+    color: #222021; /* shadow */
 }
 
 .dark-content {
-    background: #777b7e; /* steel */
+    background: #222021; /* steel */
     color: #d9dddc; /* pearl river */
 }
 
 .light-content a {
-    color: #363636; /* shadow */
+    color: #222021; /* shadow */
 }
 
 .dark-content a {
