--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,9 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@300;400;500;600&display=swap');
 
 * {
     margin: 0;
     padding: 0;
-    font-family: 'Source Sans Pro', sans-serif;
+    /*font-family: 'Source Sans Pro', sans-serif;*/
+    font-family: 'Oswald', sans-serif;
 }
 
 body {
@@ -26,6 +28,18 @@ body a {
 .dark-content {
     background: #222021; /* steel */
     color: #d9dddc; /* pearl river */
+}
+
+a {
+    font-weight: 300;
+}
+
+h1 {
+    font-weight: 500;
+}
+
+h2 {
+    font-weight: 400;
 }
 
 .light-content a {
