--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -35,11 +35,19 @@ a {
 }
 
 h1 {
-    font-weight: 500;
+    font-weight: 700;
 }
 
 h2 {
-    font-weight: 400;
+    font-weight: 600;
+}
+
+h3 {
+    font-weight: 500;
+}
+
+p {
+    font-weight: 300;
 }
 
 .light-content a {
